--- a/website/templates/signup.html
+++ b/website/templates/signup.html
@@ -7,7 +7,7 @@
         <form method="POST" action="">
             {{ form.hidden_tag() }}
             <fieldset class="form-group">
-                <legend class="border-bottom mb-4">Do It Now!</legend>
+                <legend class=""><img src="../static/site-source/hejflix.png" alt=""></legend>
                 <div class="form-group">
                     {{ form.username.label(class="form-control-label") }}
                     <br>
