--- a/website/templates/layout.html
+++ b/website/templates/layout.html
@@ -7,13 +7,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Netflix Clone - {{ title }}</title>
     <link rel="stylesheet" href="../static/style.css">
+    {% block import %}{% endblock import %}
 </head>
 <body class="body">
-    <nav class="nav bg-netflix">
+    <nav class="nav bg-slate-900">
         <ul class="nav-list flex flex-row">
             <li class="nav-list-item"><a class="nav-list-item-link" href="{{ url_for('views.home') }}">home</a></li>
             <li class="nav-list-item"><a class="nav-list-item-link" href="{{ url_for('auth.login') }}">login</a></li>
             <li class="nav-list-item"><a class="nav-list-item-link" href="{{ url_for('auth.register') }}">signup</a></li>
+            <li><img src="../static/site-source/hejflix.png" alt="logo" class="h-100px"></li>
         </ul>
     </nav>
     <main class="main">
