Login Mechanism 1.0.0 comeplete, added newuser templates and prepareed loginform and template

--- a/website/templates/home.html
+++ b/website/templates/home.html
@@ -1,4 +1,7 @@
 {% extends "layout.html" %}
+{% block import %}
+<link rel="stylesheet" href="../static/home.css">
+{% endblock import %}
 {% block content %}
 Home
 {% endblock %}
