--- a/website/templates/login.html
+++ b/website/templates/login.html
@@ -1,3 +1,6 @@
 {% extends "layout.html" %}
+{% block import %}
+<link rel="stylesheet" href="../static/login.css">
+{% endblock import %}
 {% block content %}
 {% endblock %}
