--- a/website/templates/layout.html
+++ b/website/templates/layout.html
@@ -12,14 +12,34 @@
 <body class="body">
     <nav class="nav bg-slate-900">
         <ul class="nav-list flex flex-row">
+            <li><img src="../static/site-source/hejflix.png" alt="logo" class="h-100px"></li>
+
             <li class="nav-list-item"><a class="nav-list-item-link" href="{{ url_for('views.home') }}">home</a></li>
             <li class="nav-list-item"><a class="nav-list-item-link" href="{{ url_for('auth.login') }}">login</a></li>
             <li class="nav-list-item"><a class="nav-list-item-link" href="{{ url_for('auth.register') }}">signup</a></li>
-            <li><img src="../static/site-source/hejflix.png" alt="logo" class="h-100px"></li>
+            
         </ul>
     </nav>
+    <div class="flashed">
+        {% with messages = get_flashed_messages(with_categories=true) %}
+            {% if messages %}
+                {% for category,message in messages %}
+                    {% if category == "error" %}
+                    <div class="bg-red-500 text-red-900" role="alert">
+                        {{ message }}
+                    </div>
+                    {% else %}
+                    <div class="bg-green-600 text-green-900" role="alert">
+                        {{ message }}
+                    </div>
+                    {% endif %}
+                {% endfor %}
+            {% endif %}
+        {% endwith %}
+    </div>
     <main class="main">
         {% block content %}{% endblock %}
     </main> 
 </body>
+<script src="../static/z.js"></script>
 </html>
