--- a/website/templates/login.html
+++ b/website/templates/login.html
@@ -3,4 +3,48 @@
 <link rel="stylesheet" href="../static/login.css">
 {% endblock import %}
 {% block content %}
+<div class="main">
+
+    <div class="sign-up">
+        <form method="POST" action="">
+            {{ form.hidden_tag() }}
+            <fieldset class="form-group">
+                <legend class="">Log in with your account</legend>
+                <div class="form-group">
+                    {{ form.email.label(class="form-control-label") }}
+                    <br>
+                    {% if form.email.errors %}
+                        {{ form.email(class="form-item is-invalid") }}
+                    <div class="invalid-feedback">
+                        {% for error in form.email.errors %}
+                            <span>{{ error }}</span>
+                        {% endfor %}
+                    </div>
+                {% else %}
+                    {{ form.email(class="form-item") }}
+                {% endif %}
+
+                </div>
+                <div class="form-group">
+                    {{ form.password.label(class="form-control-label") }}
+                    <br>
+                    {% if form.password.errors %}
+                    {{ form.password(class="form-item is-invalid") }}
+                    <div class="invalid-feedback">
+                        {% for error in form.password.errors %}
+                            <span>{{ error }}</span>
+                        {% endfor %}
+                    </div>
+                {% else %}
+                    {{ form.password(class="form-item") }}
+                {% endif %}
+
+                </div>
+            </fieldset>
+            <div class="form-group">
+                {{ form.submit(class="bn632-hover bn28") }}
+            </div>
+        </form>
+    </div>
+</div>
 {% endblock %}
