--- a/website/templates/newuser.html
+++ b/website/templates/newuser.html
@@ -6,6 +6,12 @@
 
 {% block content %}
 <div class="main">
-    
+    <h1 class="ultra-header">Hej Welcome to Hejflix</h1>
+
+    <div class="greet"><p>the perfect place to waste your time on</p></div>
+    <div class="greet"><p>get started for free lmao</p></div>
+    <br>
+    <div class="makeanacc">Make an account rn <span><a href="/register">register</a></span></div>
+    <div class="alreadyhaveone">already have an account? <span><a href="/login">Log In</a></span></div>
 </div>
 {% endblock content %}
