--- a/website/static/newuser.css
+++ b/website/static/newuser.css
@@ -31,3 +31,45 @@ html {
     -o-background-size: cover;
     background-size: cover;
 }
+
+main.main {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+div.main {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    background-color: rgba(0,0,0,0.5);
+    margin-top: 3rem;
+    padding: 1rem 2.5rem 1rem 2.5rem;
+    border-radius: 10px;
+}
+
+.ultra-header {
+    font-family: 'Roboto Condensed', sans-serif;
+    font-size: 6rem;
+    color: var(--netflix-red-dark);
+}
+
+.makeanacc,.alreadyhaveone{
+    font-size: 2.3rem;
+    color: white;
+    padding-top: 40px;
+    padding-bottom: 40px;
+}
+span>a {
+    cursor: pointer;
+    text-decoration: underline;
+    color: blue;
+    font-weight: bold;
+}
+.greet {
+    font-size: 2.4rem;
+    color: white;
+    padding-top: 40px;
+    padding-bottom: 40px;
+}
